Set R_CAUSE into trapframe in curlwp before calling mips_fpu_trap() for workaround PR port-mips/44639.

mipsX_user_gen_exception() in mipsX_subr.S (which may call
mips_fpu_trap()) doesn't set R_CAUSE in curlwp trapframe, while
mips1_use_intr() in locore_mips1.S (that may call mips_fpu_intr()) does.

All tests in tests/lib/libc/ieeefp on MIPS3 should pass now.